<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modul6"
    android:layout_marginBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fkom" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:padding="8dp"
                android:text="@string/dummy_photos"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:text="@string/dummy_value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:text="@string/visi"
            android:fontFamily="@font/poppins_semibold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:text="@string/spesification"
            android:fontFamily="@font/poppins_semibold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lahir"
                    android:fontFamily="@font/poppins"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/lahir_detail"
                    android:fontFamily="@font/poppins"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/prodi"
                    android:fontFamily="@font/poppins"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/prodi_detail"
                    android:fontFamily="@font/poppins"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fasilitas"
                    android:fontFamily="@font/poppins"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/detail_fasilitas"
                    android:fontFamily="@font/poppins"/>
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cirle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/profile_image"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/my_name"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/cirle"
                android:fontFamily="@font/poppins_semibold"/>
        </RelativeLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/buy"
            android:fontFamily="@font/poppins_bold"/>
    </LinearLayout>

</ScrollView>